spacing on manifesto

--- a/resources/assets/scss/dashboard/_dashboard-printstyle.scss
+++ b/resources/assets/scss/dashboard/_dashboard-printstyle.scss
@@ -210,6 +210,10 @@
             width: 445px;
         }
 
+        ul.experience {
+            padding-bottom: 30px;
+        }
+
         .tagcloud {
             width: 210mm;
             background-color: rgba( $white, 0.2);
