hide error message in forum if empty

--- a/resources/assets/scss/forum/_comment.scss
+++ b/resources/assets/scss/forum/_comment.scss
@@ -72,6 +72,10 @@ form.comment-form {
         white-space: nowrap;
         background: white;
         font-size: 15px;
+
+        &:empty {
+            display: none;
+        }
     }
 }
 
