--- a/resources/assets/scss/pages/home/_questions.scss
+++ b/resources/assets/scss/pages/home/_questions.scss
@@ -4,131 +4,120 @@
     }
 
     .question {
-        position:absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
         visibility: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
 
-        >.content {
-            max-width: 445px;
-            width: 100%;
-            padding: 0 $gutter;
-
-            form {
-                position: relative;
-                display: inline-block;
+        >.inner {
+            .content {
+                max-width: 445px;
                 width: 100%;
-            }
+                padding: 0 $gutter;
 
-            p {
-                text-align:center;
-            }
-
-            .controls {
-                text-align:center;
-
-                .error-container {
-                    bottom: -50px;
+                form {
+                    position: relative;
+                    display: inline-block;
                     width: 100%;
-                    position: absolute;
-                    border-top: 1px solid #aeaeae;
                 }
 
-                .age {
-                    font-size: 45px;
+                p {
+                    text-align:center;
                 }
-
-                input[type=radio] {
-                    display:none;
-                    + label {
-                        position: relative;
-                        padding: 9px 0 0 42px;
-                        text-transform: uppercase;
-                        color: $lightRed;
-                        font-weight: 700;
-                        display: inline-block;
-                        margin: 0 30px;
-                        cursor: pointer;
-
-                        @include breakpoint($brk-small) {
-                            margin: 0 14px;
-                        }
-
-                        &:before, &:after {
-                            position:absolute;
-                            left: 0;
-                            top: 0;
-                        }
-
-                        &:after {
-                            transform-origin: 50% 50%;
-                            transform: scale(0, 0);
-                            width: 18px;
-                            height: 18px;
-                            border-radius: 18px;
-                            background: $lightRed;
-                            top: 8px;
-                            left: 8px;
-                            content: "";
-                            transition: transform 0.3s ease;
-                        }
-
-                        &:before {
-                            content: "";
-                            border: 4px solid $lightRed;
-                            width: 26px;
-                            height: 26px;
-                            border-radius: 34px;
-                            padding: 13px;
-                        }
-                    }
-
-                    &:checked {
-                        + label {
-                            &:after {
-                                transform: scale(1,1);
-
-                            }
-                        }
-
-                    }
-
-                }
-
             }
-
-
         }
 
+        .controls {
+            text-align: center;
+            @include pie-clearfix();
+
+            .error-container {
+                bottom: -50px;
+                width: 100%;
+                position: absolute;
+                border-top: 1px solid #aeaeae;
+            }
+
+            .age {
+                font-size: 45px;
+            }
+
+            input[type=radio] {
+                display:none;
+
+                + label {
+                    position: relative;
+                    padding: 9px 0 0 42px;
+                    text-transform: uppercase;
+                    color: $lightRed;
+                    font-weight: 700;
+                    display: inline-block;
+                    margin: 0 30px;
+                    cursor: pointer;
+                    min-height: 34px;
+
+                    @include breakpoint($brk-small) {
+                        margin: 0 14px;
+                    }
+
+                    &:before, &:after {
+                        position:absolute;
+                        left: 0;
+                        top: 0;
+                    }
+
+                    &:after {
+                        transform-origin: 50% 50%;
+                        transform: scale(0, 0);
+                        width: 18px;
+                        height: 18px;
+                        border-radius: 18px;
+                        background: $lightRed;
+                        top: 8px;
+                        left: 8px;
+                        content: "";
+                        transition: transform 0.3s ease;
+                    }
+
+                    &:before {
+                        content: "";
+                        border: 4px solid $lightRed;
+                        width: 26px;
+                        height: 26px;
+                        border-radius: 34px;
+                        padding: 13px;
+                    }
+                }
+
+                &:checked {
+                    + label {
+                        &:after {
+                            transform: scale(1,1);
+
+                        }
+                    }
+                }
+            }
+        }
 
         .next-question {
-            position: absolute;
-            display:block;
+            position: relative;
+            display: block;
             width: 50px;
             height: 50px;
-            bottom: 20px; //was initally 60px from bottom.
-            left: 50%;
-            margin-left: -25px;
+            margin: 60px auto 0;
+            cursor: pointer;
             opacity: 1;
-            cursor:pointer;
+
             svg {
                 width: 100%;
                 height: 100%;
-                // path {
-                //     // fill: $lightRed;
-                //     // transition: fill 0.3s ease;
-                // }
             }
+
             &:hover {
                 svg {
                     path {
-                        fill: $darkRed;
+                        fill: $lightRed;
                     }
                 }
             }
@@ -150,6 +139,7 @@
             right: 5px;
         }
     }
+
     &.question-0 {
         .question-nav {
             visibility:hidden;
