--- a/resources/assets/scss/pages/you-to-you/_you-to-you.scss
+++ b/resources/assets/scss/pages/you-to-you/_you-to-you.scss
@@ -51,6 +51,12 @@
     cursor: pointer;
     @include transition(background-color $transition, color $transition);
 
+    @include breakpoint($brk-medium) {
+        width: 100%;
+        height: 230px;
+        margin-left: auto;
+    }
+
     &.has-video {
         background-color: $lightRed;
 
@@ -120,8 +126,17 @@ form.letter {
     margin-left: -127px;
     margin-bottom: 60px;
 
+    @include breakpoint($brk-medium) {
+        width: 100%;
+        margin-left: auto;
+    }
+
     textarea {
         width: 100%;
         height: 290px;
+
+        @include breakpoint($brk-medium) {
+            height: 230px;
+        }
     }
 }
