fixed svg placemen in IE11

--- a/resources/assets/scss/pages/you-to-you/_you-to-you.scss
+++ b/resources/assets/scss/pages/you-to-you/_you-to-you.scss
@@ -92,7 +92,6 @@
             height: 62px;
             border-radius: 50%;
             background: $lightRed;
-            padding: 17px;
             margin: 0 auto;
             transform: scale(1, 1);
             transform-origin: 50% 50%;
@@ -100,12 +99,12 @@
             cursor: pointer;
 
             &:after {
-                @include transform(translate3d(-50%, -50%, 0));
-                position: relative;
+                @include transform(translate3d(50%, -50%, 0));
+                position: absolute;
                 content: '\e62f';
                 font-family: $icon;
                 font-size: 27px;
-                left: 1px; top: 2px;
+                left: 1px; top: 50%;
                 width: 30px;
                 height: 25px;
                 color: $white;
