--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -22,12 +22,14 @@
 
     .home-banner {
         z-index: 20;
-        width: 700px;
+        max-width: 700px;
+        width: 100%;
         position: absolute;
         top: 50%; left: 50%;
         transform: translate3d(-50%,-50%, 0);
 
         svg {
+            width: 100%;
             path {
                 fill: white;
             }
