sustainable change copy updates

--- a/resources/assets/scss/pages/sustainable-change/_sustainable-change.scss
+++ b/resources/assets/scss/pages/sustainable-change/_sustainable-change.scss
@@ -10,17 +10,8 @@
     }
 }
 
-ol.multiple-sustain {
+b.personal-habits-title {
     display: block;
-    list-style-type: decimal;
-    margin: 50px 0;
-    padding-left: 40px;
-
-    li {
-        font-weight: 500;
-        margin-bottom: 10px;
-        color: $lightRed;
-    }
 }
 
 blockquote.center{
