--- a/resources/assets/scss/core/_lists.scss
+++ b/resources/assets/scss/core/_lists.scss
@@ -19,21 +19,43 @@
     }
 }
 
-ol.privacy {
-    padding: 0 0 20px 20px;
-    li {
-        list-style: decimal;
-        margin-bottom: 12px;
+ol {
+    list-style: decimal;
+    margin-bottom: 20px;
+    font-weight: 500;
+    padding-left: 20px;
 
-        ul {
-            padding: 20px;
+    &.numlist--simple {
+        text-align: left;
 
-            li {
-                list-style: initial;
+        b {
+            display: block;
+        }
+
+        li {
+            line-height: 26px;
+            margin-bottom: 12px;
+        }
+    }
+
+    &.privacy {
+        padding: 0 0 20px 20px;
+
+        li {
+            list-style: decimal;
+            margin-bottom: 12px;
+
+            ul {
+                padding: 20px;
+
+                li {
+                    list-style: initial;
+                }
             }
         }
     }
 }
+
 
 ul {
     &.list--simple {
