--- a/resources/assets/scss/dashboard/_dashboard.scss
+++ b/resources/assets/scss/dashboard/_dashboard.scss
@@ -388,18 +388,22 @@ ul.and-i-am {
     .page-icon:after {
         content: "\e608";
     }
+}
 
-    .your-video {
-        position: relative;
-        padding-bottom: 56.25%; /* 16:9 */
-        height: 0;
-        iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
+.your-video {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+    + .your-video {
+        margin: 20px auto;
     }
 }
 
