--- a/resources/assets/scss/pages/you-to-you/_you-to-you.scss
+++ b/resources/assets/scss/pages/you-to-you/_you-to-you.scss
@@ -169,6 +169,7 @@
             height: 290px;
             margin: 0;
             background: $white;
+            color: $lightRed;
 
             &:hover {
                 background: $white;
@@ -212,5 +213,45 @@
     .letter-trigger {
         @include transform(translateX(-50%));
         margin-left: 50%;
+    }
+}
+
+[data-page="you-to-you"] {
+
+
+    .congrats-section {
+        >.inner {
+            background-color: rgba($lightRed, 0.98) !important;
+            color: $white;
+            border: 7px double rgba($white, 0.9);
+
+            .title {
+                color: $white;
+
+                &:after {
+                    display: none;
+                }
+
+                &:before {
+                    @include transform(translateX(-50%));
+                    position: absolute;
+                    content: "\e60a";
+                    font-family: $icon;
+                    bottom: -25px;
+                    font-size: 24px;
+                }
+            }
+
+            p:first-of-type {
+                padding-top: 30px;
+            }
+
+            .button {
+                border: 1px solid $white;
+                &.small {
+                    padding: 12px;
+                }
+            }
+        }
     }
 }
