--- a/resources/assets/scss/pages/misc/_privacy-terms.scss
+++ b/resources/assets/scss/pages/misc/_privacy-terms.scss
@@ -74,4 +74,19 @@
         max-width: 920px;
         margin: 0 auto;
     }
+
+    ul.the-law {
+        padding: 0 0 0 20px;
+
+        li {
+            list-style-type: lower-alpha;
+
+            ul {
+                padding: 20px 0 20px 20px;
+                li {
+                    list-style-type: lower-roman;
+                }
+            }
+        }
+    }
 }
