--- a/resources/assets/scss/pages/misc/_privacy-terms.scss
+++ b/resources/assets/scss/pages/misc/_privacy-terms.scss
@@ -80,9 +80,10 @@
 
         li {
             list-style-type: lower-alpha;
+            margin-bottom: 12px;
 
             ul {
-                padding: 20px 0 20px 20px;
+                padding: 12px 0 20px 20px;
                 li {
                     list-style-type: lower-roman;
                 }
