--- a/resources/assets/scss/pages/you-to-you/_you-to-you.scss
+++ b/resources/assets/scss/pages/you-to-you/_you-to-you.scss
@@ -141,7 +141,8 @@
         }
 
         .letter-container {
-            height: auto;
+            height: 290px;
+
             form {
                 @include transform(translateY(0));
                 opacity: 1;
@@ -157,6 +158,7 @@
         height: 0;
         overflow: hidden;
         z-index: 1;
+        @include transition(height $transition);
 
         @include breakpoint($brk-medium) {
             width: 100%;
@@ -217,8 +219,6 @@
 }
 
 [data-page="you-to-you"] {
-
-
     .congrats-section {
         >.inner {
             background-color: rgba($lightRed, 0.98) !important;
