--- a/resources/assets/scss/ui/_modal.scss
+++ b/resources/assets/scss/ui/_modal.scss
@@ -296,6 +296,19 @@ html.remodal-is-locked {
     border: 0;
 }
 
+.cropper-modal.remodal {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 0;
+
+    .done-button {
+        position:absolute;
+        bottom:0;
+        right: 0;
+        z-index: 20;
+    }
+}
+
 /* Keyframes
    ========================================================================== */
 
