--- a/resources/assets/scss/pages/boomerang/_boomerang.scss
+++ b/resources/assets/scss/pages/boomerang/_boomerang.scss
@@ -85,10 +85,18 @@
         text-align: left;
     }
 
+    .copy-link {
+        padding: 20px;
+        color: #3e3e3e;
+        white-space: pre;
+        border: 1px solid gainsboro;
+    }
+
     .message {
         color: #aeaeae;
         p {
             text-align: left;
+            max-width: initial;
         }
     }
 }
