cropper tool styles

--- a/resources/assets/css/admin.css
+++ b/resources/assets/css/admin.css
@@ -5,7 +5,7 @@
 
 /* line 74, ../scss/core/_settings.scss */
 .grey {
-  color: #e6e6e6;
+  color: #999999;
 }
 
 /* line 1, ../scss/forum/_comment.scss */
