--- a/resources/assets/scss/pages/misc/_privacy-terms.scss
+++ b/resources/assets/scss/pages/misc/_privacy-terms.scss
@@ -17,7 +17,7 @@
         padding: 0 $gutter;
         .content {
             position: relative;
-            max-width: 445px;
+            max-width: 620px;
             width: 100%;
             margin: 0 auto;
             font-size: 17px;
@@ -30,8 +30,6 @@
                 padding-top: 40px;
             }
         }
-
-
     }
 
     .dots {
@@ -43,7 +41,7 @@
     }
 
     p {
-        max-width: 445px;
+        max-width: 620px;
         margin-left: auto;
         margin-right: auto;
         font-weight: 400;
@@ -87,6 +85,33 @@
                 li {
                     list-style-type: lower-roman;
                 }
+            }
+        }
+    }
+}
+
+ol.privacy-policy {
+    >li {
+        padding-left: 40px;
+
+        h4 {
+            font-weight: 600;
+            margin-bottom: 16px;
+
+            + p {
+                margin-bottom: 12px;
+            }
+        }
+
+        ul {
+            padding: 0 0 20px 20px;
+
+            li {
+                font-weight: 400;
+                line-height: 26px;
+                margin-bottom: 12px;
+                list-style-type: disc;
+                padding-left: 30px;
             }
         }
     }
