--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -33,7 +33,7 @@
         }
 
         @include breakpoint($break-620) {
-            width: 120%;
+            width: 90%;
         }
     }
 }
@@ -68,7 +68,8 @@
     }
 
     .content {
-        width: 445px;
+        max-width: 445px;
+        width: 100%;
         text-align: center;
 
         p {
