--- a/resources/assets/scss/pages/you-to-you/_you-to-you.scss
+++ b/resources/assets/scss/pages/you-to-you/_you-to-you.scss
@@ -162,12 +162,12 @@
 
         @include breakpoint($brk-medium) {
             width: 100%;
-            height: 230px;
             margin-left: auto;
         }
 
         textarea {
             width: 100%;
+            max-width: 700px;
             height: 290px;
             margin: 0;
             background: $white;
