payment failed copy.

--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -41,6 +41,7 @@
 @import "pages/misc/non-mod-page";
 @import "pages/misc/tag-cloud";
 @import "pages/misc/login";
+@import "pages/misc/payment";
 @import "pages/account/account";
 
 // dashboard
