fix social logos

--- a/resources/assets/scss/core/_settings.scss
+++ b/resources/assets/scss/core/_settings.scss
@@ -15,6 +15,7 @@ $blue-light: #0292C3;
 
 // fonts
 $icon: 'icomoon';
+$social: 'social';
 
 // animations
 $ease: cubic-bezier(0.455, 0.030, 0.515, 0.955);
