might not need this but keeping to be sure.

--- a/resources/assets/scss/core/_lists.scss
+++ b/resources/assets/scss/core/_lists.scss
@@ -1,3 +1,5 @@
+//delete maybe
+
 .quote-list {
     list-style: decimal;
     margin-bottom: 20px;
@@ -8,6 +10,8 @@
         margin-bottom: 5px;
     }
 }
+//end delete
+
 
 .u-quote-list {
     margin-bottom: 20px;
