copy/list updates from BH

--- a/resources/assets/scss/core/_lists.scss
+++ b/resources/assets/scss/core/_lists.scss
@@ -65,6 +65,15 @@ ul {
     &.list--simple {
         padding: 0 0 20px 20px;
 
+    &.colors {
+        li {
+            color: $black;
+            &:nth-child(2n) {
+                color: $lightRed;
+            }
+        }
+    }
+
         li {
             position: relative;
             margin-bottom: 10px;
