--- a/resources/assets/scss/core/_settings.scss
+++ b/resources/assets/scss/core/_settings.scss
@@ -75,6 +75,10 @@ $break-1024 : 1024px;
 .grey {
     color: #808080;
 }
+
+.red-light {
+    color: $lightRed;
+}
 .margin-top {
     margin-top: 30px;
 }
