--- a/resources/assets/scss/pages/you-to-you/_you-to-you.scss
+++ b/resources/assets/scss/pages/you-to-you/_you-to-you.scss
@@ -1,3 +1,15 @@
+[data-page="share-you-to-you"] {
+    .content {
+        text-align: center;
+        padding: 20px;
+
+        img {
+            width: 100%;
+            max-width: 1200px;
+        }
+    }
+}
+
 .video-details {
     width: 700px;
     margin-left: -127px;
