Alter video display to use the video thats uploaded to the belief school server rather then the video thats uploaded to vimeo

--- a/resources/assets/scss/dashboard/_dashboard.scss
+++ b/resources/assets/scss/dashboard/_dashboard.scss
@@ -402,6 +402,9 @@ ul.and-i-am {
         width: 100%;
         height: 100%;
     }
+    video {
+        width: 100%;
+    }
     + .your-video {
         margin: 20px auto;
     }
