--- a/resources/assets/scss/dashboard/_dashboard-printstyle.scss
+++ b/resources/assets/scss/dashboard/_dashboard-printstyle.scss
@@ -2,6 +2,8 @@
     display: none;
 }
 
+
+
 /* ==========================================================================
    Print styles
    ========================================================================== */
@@ -22,7 +24,10 @@
 }
 
 
-@media print and (color){
+.print-manifesto {
+
+
+
 
     /* THE INITAL RESET */
     *,
