add ffmpeg to create thumbnail of uploaded video

--- a/resources/assets/scss/dashboard/_dashboard-printstyle.scss
+++ b/resources/assets/scss/dashboard/_dashboard-printstyle.scss
@@ -232,6 +232,17 @@
             transition: none;
         }
     }
+
+    .your-video {
+        video {
+            display:none;
+
+        }
+        .poster {
+            display:block;
+            width: 100%;
+        }
+    }
 }
 
 
