--- a/resources/assets/scss/dashboard/_dashboard.scss
+++ b/resources/assets/scss/dashboard/_dashboard.scss
@@ -405,6 +405,9 @@ ul.and-i-am {
     video {
         width: 100%;
     }
+    .poster {
+        display:none;
+    }
     + .your-video {
         margin: 20px auto;
     }
