--- a/resources/assets/scss/pages/home/_questions.scss
+++ b/resources/assets/scss/pages/home/_questions.scss
@@ -4,10 +4,11 @@
     }
 
     .question {
-        position: absolute;
+        //position: absolute;
         top: 0; left: 0;
         width: 100%; height: 100%;
         visibility: hidden;
+        display:none;
 
         >.inner {
             height: 100%;
