added h4 styles for 'daily practise'

--- a/resources/assets/scss/core/_typography.scss
+++ b/resources/assets/scss/core/_typography.scss
@@ -93,6 +93,13 @@ h3 {
     padding: 12px 0;
 }
 
+h4 {
+    margin-bottom: 10px;
+    font-size: 1.125em;
+    font-weight: 500;
+    color: $lightRed;
+}
+
 blockquote {
     color: $lightRed;
     font-size: 21px;
