add loader to image cropper

--- a/resources/assets/scss/ui/_cropper.scss
+++ b/resources/assets/scss/ui/_cropper.scss
@@ -1,5 +1,14 @@
 .cropper-modal.remodal {
     background: transparent;
+
+    &.is-loading {
+        .done-button {
+            display:none;
+        }
+        .spinner {
+            display:block;
+        }
+    }
 }
 
 .crop-selector {
