--- a/resources/assets/scss/pages/un-stuck/_un-stuck.scss
+++ b/resources/assets/scss/pages/un-stuck/_un-stuck.scss
@@ -49,7 +49,7 @@
                 width: 100%;
                 height: 100%;
                 border-radius: 50%;
-                //background-color: rgba(255, 255, 255, 0.6);
+
                 path {
                     fill: $lightRed;
                 }
@@ -59,6 +59,7 @@
         textarea {
             width: 100%;
             height: 100%;
+            max-height: 256px;
             padding: 30px 15px; //this was 50px 20px;
             color: $fontColour;
             text-align:center;
@@ -68,6 +69,7 @@
             border: 2px solid transparent;
             border-image: linear-gradient(23deg, rgba(#abafb1,1) 0%, rgba(#abafb1,0) 90%);
             border-image-slice: 1;
+            resize: none;
 
             &:focus {
                 background: $lightRed;
@@ -144,7 +146,6 @@
         padding: 35px 25px 25px 25px;
         text-align: center;
         margin-bottom: 15px;
-        //overflow: auto;
 
         @include breakpoint($brk-medium) {
             margin: 15px auto;
@@ -214,6 +215,7 @@
         textarea {
             width: 100%;
             height: 100%;
+            max-height: 256px;
             background: transparent;
             padding: 35px 15px;
             color: $fontColour;
@@ -221,6 +223,7 @@
             font-style: italic;
             margin: 0;
             transition: background 0.2s ease, border 0.2s ease;
+            resize: none;
 
             &:focus {
                 background: $lightRed;
@@ -234,7 +237,6 @@
         }
 
         textarea:focus + .icon {
-
             svg path {
                 fill: white;
             }
