added 2px border for dreamboard

--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -257,6 +257,7 @@
         cursor: pointer;
         transition: background-color $transition;
         backface-visibility: hidden;
+        border: 2px solid $white;
 
 
         &:hover {
