fixed hidden question nav.

--- a/resources/assets/scss/pages/home/_question-nav.scss
+++ b/resources/assets/scss/pages/home/_question-nav.scss
@@ -4,7 +4,6 @@ $radius: 5px;
     .question-nav {
         display:none;
     }
-
 }
 
 .question-nav ul {
@@ -19,7 +18,7 @@ $radius: 5px;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    z-index: 100;display:none;
+    z-index: 100;
 }
 
 .question-nav li {
