--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -285,7 +285,7 @@
         input {
             position: absolute;
             top: 0;
-            left: 0;
+            right: 0;
             font-size: 999px;
             opacity: 0;
             cursor:pointer;
