--- a/resources/assets/scss/ui/_buttons.scss
+++ b/resources/assets/scss/ui/_buttons.scss
@@ -131,3 +131,30 @@ button.button {
         }
     }
 }
+
+
+.iecon {
+    $icon-size: 40px;
+    box-shadow: inset 0 0 0px 2px white;
+    border-radius: 100%;
+    height: $icon-size;
+    width: $icon-size;
+    position: relative;
+    opacity: 1;
+    transition: box-shadow $transition, opacity $transition;
+
+    &:hover {
+        box-shadow: inset 0 0 10px 5px rgba($white, 0);
+
+        .iecon__arrow {
+            transform: scale(1.3);
+        }
+    }
+
+    &__arrow {
+        width: $icon-size;
+        height: $icon-size;
+        transition: transform $transition;
+        transform: scale(1);
+    }
+}
