BH211 "Module 3> Upload images: there's no way to tell"

--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -303,6 +303,7 @@
                 width: 195px * 2 + 32px;
                 height: 129px * 2 + 32px;
                 margin: 20px auto;
+                border: 3px solid #f16060;
             }
 
             @include breakpoint($brk-small) {
