--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -55,17 +55,15 @@
 }
 
 .account-creation {
-    > .inner {
+    // > .inner {
 
-        .next-section {
+    //     .next-section {
 
-            svg {
-                path {
-                    fill: $lightRed;
-                }
-            }
-        }
-    }
+    //         .iecon {
+    //             box-shadow: inset 0 0 0px 2px $lightRed;
+    //         }
+    //     }
+    // }
 
     .content {
         max-width: 445px;
