--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -30,6 +30,7 @@
 @import "pages/home/home";
 @import "pages/about/about";
 @import "pages/about/about-paula";
+@import "pages/faq/faq";
 @import "pages/contact/contact";
 @import "pages/welcome/welcome";
 @import "pages/boomerang/boomerang";
